{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 22,
  "lineage": "2071f39a-702b-d5ef-e86b-e9ff2768489b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:726885752981:security-group/sg-0403ccf77a81f1c5c",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-0403ccf77a81f1c5c",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-06442b408dbab9341"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-065e82b10908a8e9b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:726885752981:subnet/subnet-065e82b10908a8e9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "available_ip_address_count": 4087,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065e82b10908a8e9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "726885752981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-06442b408dbab9341"
          }
        },
        {
          "index_key": "subnet-09b452561339deff3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:726885752981:subnet/subnet-09b452561339deff3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "available_ip_address_count": 4087,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b452561339deff3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "726885752981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-06442b408dbab9341"
          }
        },
        {
          "index_key": "subnet-0ae3f8404eaf6ff48",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:726885752981:subnet/subnet-0ae3f8404eaf6ff48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "available_ip_address_count": 4087,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae3f8404eaf6ff48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "726885752981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-06442b408dbab9341"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:726885752981:vpc/vpc-06442b408dbab9341",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0910fa55d0479a58d",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-008b73726d174082b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06442b408dbab9341",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f1eb5a0a713a6503",
            "owner_id": "726885752981",
            "tags": {
              "Name": "default"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "aaaa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:726885752981:loadbalancer/net/aaaa/28cf06a11333385e",
            "arn_suffix": "net/aaaa/28cf06a11333385e",
            "dns_name": "aaaa-28cf06a11333385e.elb.eu-west-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:726885752981:loadbalancer/net/aaaa/28cf06a11333385e",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "aaaa",
            "security_groups": [
              "sg-0403ccf77a81f1c5c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-065e82b10908a8e9b"
              },
              {
                "subnet_id": "subnet-09b452561339deff3"
              },
              {
                "subnet_id": "subnet-0ae3f8404eaf6ff48"
              }
            ],
            "subnets": [
              "subnet-065e82b10908a8e9b",
              "subnet-09b452561339deff3",
              "subnet-0ae3f8404eaf6ff48"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-06442b408dbab9341",
            "zone_id": "Z2IFOLAFXWLO4F"
          },
          "dependencies": [
            "data.aws_security_group.selected",
            "data.aws_subnet.selected",
            "data.aws_subnets.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "aaaa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:726885752981:listener/net/aaaa/28cf06a11333385e/269a3170e8329c98",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:726885752981:targetgroup/aaaa/1e92e67bd9ff1b80",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:726885752981:listener/net/aaaa/28cf06a11333385e/269a3170e8329c98",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:726885752981:loadbalancer/net/aaaa/28cf06a11333385e",
            "port": 8083,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.aaaa",
            "aws_lb_target_group.aaaa",
            "data.aws_security_group.selected",
            "data.aws_subnet.selected",
            "data.aws_subnets.selected",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "aaaa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:726885752981:targetgroup/aaaa/1e92e67bd9ff1b80",
            "arn_suffix": "targetgroup/aaaa/1e92e67bd9ff1b80",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 15,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:726885752981:targetgroup/aaaa/1e92e67bd9ff1b80",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "aaaa",
            "port": 8083,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06442b408dbab9341"
          },
          "dependencies": [
            "data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"aaaa\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:726885752981:subnet/subnet-065e82b10908a8e9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "available_ip_address_count": 4087,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065e82b10908a8e9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "726885752981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-06442b408dbab9341"
          }
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"aaaa\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:726885752981:security-group/sg-0f2e34ba570b16cf9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f2e34ba570b16cf9",
            "ingress": [],
            "name": "aaaa-20231108085258532400000004",
            "name_prefix": "aaaa-",
            "owner_id": "726885752981",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Project": "Example"
            },
            "tags_all": {
              "Environment": "Development",
              "Project": "Example"
            },
            "timeouts": null,
            "vpc_id": "vpc-06442b408dbab9341"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.aaaa",
            "data.aws_security_group.selected",
            "data.aws_subnet.selected",
            "data.aws_subnets.selected",
            "data.aws_vpc.selected",
            "module.ecs.module.service.data.aws_subnet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"aaaa\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb_ingress_3000",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Kafka Connect Port",
            "from_port": 8083,
            "id": "sgrule-1311307725",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f2e34ba570b16cf9",
            "security_group_rule_id": "sgr-07aa2e3add63e3d4d",
            "self": false,
            "source_security_group_id": "sg-0403ccf77a81f1c5c",
            "timeouts": null,
            "to_port": 8083,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.aaaa",
            "data.aws_security_group.selected",
            "data.aws_subnet.selected",
            "data.aws_subnets.selected",
            "data.aws_vpc.selected",
            "module.ecs.module.service.aws_security_group.this",
            "module.ecs.module.service.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-691492388",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f2e34ba570b16cf9",
            "security_group_rule_id": "sgr-09ae06db94a9b4a5c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.aaaa",
            "data.aws_security_group.selected",
            "data.aws_subnet.selected",
            "data.aws_subnets.selected",
            "data.aws_vpc.selected",
            "module.ecs.module.service.aws_security_group.this",
            "module.ecs.module.service.data.aws_subnet.this"
          ]
        }
      ]
    }
  ]
}